@@ -49,6 +49,8 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 
 *Heartbeat*
 
+- Made the url field of heartbeat aggregatable. {pull}6263[6263]
+
 *Metricbeat*
 
 - Rename `heap_init` field to `heap.init`. {pull}5320[5320]
